; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_3c527.c_cleanup_card.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_3c527.c_cleanup_card.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32, i32 }
%struct.mc32_local = type { i32 }

@MC32_IO_EXTENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @cleanup_card to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup_card(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.mc32_local*, align 8
  %4 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %5 = load %struct.net_device*, %struct.net_device** %2, align 8
  %6 = call %struct.mc32_local* @netdev_priv(%struct.net_device* %5)
  store %struct.mc32_local* %6, %struct.mc32_local** %3, align 8
  %7 = load %struct.mc32_local*, %struct.mc32_local** %3, align 8
  %8 = getelementptr inbounds %struct.mc32_local, %struct.mc32_local* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @mca_mark_as_unused(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @mca_set_adapter_name(i32 %12, i32* null)
  %14 = load %struct.net_device*, %struct.net_device** %2, align 8
  %15 = getelementptr inbounds %struct.net_device, %struct.net_device* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.net_device*, %struct.net_device** %2, align 8
  %18 = call i32 @free_irq(i32 %16, %struct.net_device* %17)
  %19 = load %struct.net_device*, %struct.net_device** %2, align 8
  %20 = getelementptr inbounds %struct.net_device, %struct.net_device* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @MC32_IO_EXTENT, align 4
  %23 = call i32 @release_region(i32 %21, i32 %22)
  ret void
}

declare dso_local %struct.mc32_local* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @mca_mark_as_unused(i32) #1

declare dso_local i32 @mca_set_adapter_name(i32, i32*) #1

declare dso_local i32 @free_irq(i32, %struct.net_device*) #1

declare dso_local i32 @release_region(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
